force-app/main/default/objects/SBQQ__ProductOption__c/fields/ChargeType__c.field-meta.xml
<CustomField>
    <fullName>ChargeType__c</fullName>
    <formula>TEXT(SBQQ__OptionalSKU__r.SBQQ__ChargeType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Type</label>
    <type>Text</type>
</CustomField>