force-app/main/default/objects/SBQQ__ProductOption__c/fields/IsDynamic__c.field-meta.xml
<CustomField>
    <fullName>IsDynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dynamic?</label>
    <type>Checkbox</type>
</CustomField>