force-app/main/default/objects/SBQQ__ProductOption__c/fields/MandatoryFor__c.field-meta.xml
<CustomField>
    <fullName>MandatoryFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mandatory For</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Options (Mandatory For)</relationshipLabel>
    <relationshipName>MandatoryFor2</relationshipName>
    <type>Lookup</type>
</CustomField>