force-app/main/default/objects/SBQQ__ProductOption__c/fields/MarketingCategory__c.field-meta.xml
<CustomField>
    <fullName>MarketingCategory__c</fullName>
    <formula>TEXT(SBQQ__OptionalSKU__r.MarketingCategory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Category</label>
    <type>Text</type>
</CustomField>