force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__AppliedImmediatelyContext__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AppliedImmediatelyContext__c</fullName>
    <description>&apos;Apply Immediately on Select&apos; applies changes immediately on selection of product, whereas &apos;Apply Immediately on Quantity Change&apos; does that on change of quantity. &apos;Always&apos; applies changes both the times, on selection of product and on change of quantity.</description>
    <inlineHelpText>&apos;Apply Immediately on Select&apos; applies changes immediately on selection of product, whereas &apos;Apply Immediately on Quantity Change&apos; does that on change of quantity. &apos;Always&apos; applies changes both the times, on selection of product and on change of quantity.</inlineHelpText>
    <label>Apply Immediately Context</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Always</fullName><default>false</default><label>Always</label></value>
            <value><fullName>On Selection</fullName><default>false</default><label>On Selection</label></value>
            <value><fullName>On Quantity Change</fullName><default>false</default><label>On Quantity Change</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>