force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__DefaultPricingTable__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DefaultPricingTable__c</fullName>
    <inlineHelpText>Select the pricing table this product should appear in by default when price dimensions are defined.</inlineHelpText>
    <label>Default Pricing Table</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Segmented</fullName><default>false</default><label>Segmented</label></value>
            <value><fullName>Standard</fullName><default>false</default><label>Standard</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>