force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__SubscriptionScope__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SubscriptionScope__c</fullName>
    <description>Specifies percent of total calculation scope for percent of total priced products added as product options.</description>
    <inlineHelpText>Choose how this percent of total product option is calculated. Package is specific to the parent product. Components is specific to sibling components. Entire Hierarchy covers all lines in the configuration.</inlineHelpText>
    <label>Percent of Total Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Package</fullName><default>false</default><label>Package</label></value>
            <value><fullName>Components</fullName><default>false</default><label>Components</label></value>
            <value><fullName>Both</fullName><default>false</default><label>Package &amp; Components</label></value>
            <value><fullName>Entire Hierarchy</fullName><default>false</default><label>Entire Hierarchy</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>