force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Type__c</fullName>
    <description>Type of this option.</description>
    <inlineHelpText>Use &quot;Component&quot; if this option, including quantity, is dependent on parent. Use&quot; Accessory&quot; if this option is dependent on parent but quantity is independent. Use &quot;Related Product&quot; for related but fully independent products.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Component</fullName><default>true</default><label>Component</label></value>
            <value><fullName>Accessory</fullName><default>false</default><label>Accessory</label></value>
            <value><fullName>Related Product</fullName><default>false</default><label>Related Product</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>