force-app/main/default/objects/SBQQ__ProductOption__c/fields/UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDate__c</fullName>
    <label>UpdatedDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>